# uncertainty-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: python-tests.yml
examples/: bayesian_net_example.py  deep_ensemble_example.py  mc_dropout_example.py
tests/: test_bayesian_layer.py  test_deep_ensemble.py  test_mc_dropout.py  test_visualization.py
uncertainty_toolkit/: __init__.py  base.py  bayesian_layer.py  bootstrap.py  deep_ensemble.py  mc_dropout.py  swag.py  utils.py  visualization.py
