[metadata]
name = uncertainty-toolkit
version = 0.1.0
description = Lightweight Uncertainty Estimation Toolkit for PyTorch Models
author = Maryam Yousedi
author_email = maryamyousefi.info@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maryousefi/uncertainty-toolkit
license = MIT

[options]
packages = find:
install_requires =
    torch
    matplotlib
python_requires = >=3.8

[options.packages.find]
where = uncertainty_toolkit
